--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>javaqa_homeworks_11</artifactId>
+    <artifactId>TaskManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -81,8 +81,3 @@
     </build>
 
 </project>
-        Epic.java
-        Epic.java
-        SimpleTask.java
-        Task.java
-        Todos.java
